open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
/********************************************************************************
 * Copyright (c) 2019-2022 EclipseSource and others.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v. 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 *
 * This Source Code may also be made available under the following Secondary
 * Licenses when the conditions for such availability set forth in the Eclipse
 * Public License v. 2.0 are satisfied: GNU General Public License, version 2
 * with the GNU Classpath Exception which is available at
 * https://www.gnu.org/software/classpath/license.html.
 *
 * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 ********************************************************************************/

.sprotty-graph {
    font-size: 15pt;
    border: none;
    height: 100%;
    background-size: 10px 10px;

	background-image: linear-gradient(to right, #E4E4E4 1px, transparent 1px), linear-gradient(to bottom, #E4E4E4 1px, transparent 1px);
    
}

.vs-dark .sprotty-graph { 
    /* vs-dark dark-theia theia-dark    vs light-theia theia-light  */
	background-image: linear-gradient(to right, #2A2A2A 1px, transparent 1px), linear-gradient(to bottom, #2A2A2A 1px, transparent 1px);
}

.sprotty-text {
    font-size: 12pt;
    text-anchor: middle;
}

.sprotty-node {
    stroke-width: 0;
    font-weight: bold;
}

.sprotty-label {
    stroke-width: 0;
    fill: #000;
    font-weight: inherit;
    text-align: inherit;
    font-size: 100%;
}

.sprotty-label.heading {
    font-weight: normal;
    font-size: 0.6em;
    fill: #f0f3f8;
}


.sprotty-resize-handle.selected {
    fill: #47699B;
}

.icon path {
    stroke-width: 0;
    fill: #f0f3f8;
}

.icon .icon-background {
    fill: transparent;
}

.BPMNLabel > .sprotty-node {
	fill: transparent;
}

.BPMNLabel > .sprotty-label.heading {
	fill: var(--theia-titleBar-activeForeground);
}
.BPMNLabel > .sprotty-node.mouseover {
	fill: var(--theia-activityBar-background);
}

.task > .sprotty-node {
    fill: #425C81;
}

.task.bpmnextension-imixs > .sprotty-node {
	stroke: darkorange;
	stroke-width: 1;
}
.event.bpmnextension-imixs > .sprotty-node {
	stroke: darkorange;
	stroke-width: 1;
}

/*** Events ***/


.event.startEvent > circle {
	fill: #57A14C;
}
.event.endEvent > circle {
	fill: #BE5961;
}

.event.intermediateCatchEvent > circle {
	fill: #82848a;
}
.event.intermediateThrowEvent > circle {
	fill: #82848a;
}

.event.boundaryEvent > circle {
	fill: #627ea5;
	stroke-width: 1;
	stroke: #354152a8
}

/*** Gateways ***/

.gateway > polygon {
    fill: #C39D5C;
}


.dataObject > .sprotty-node {
	opacity: 80%;
	stroke: var(--theia-focusBorder);
    outline-color: #ccc;
    outline-style: solid;
    outline-width: 1px;
    fill: #82848a;
}

.textAnnotation > .sprotty-node {
	opacity: 20%;
    fill: #82848a;
}

.textAnnotation > polyline {
    stroke: #57A14C;
    stroke-width: 2;
    fill: none;
}
.textAnnotation > .bpmn-text-node pre {
	color: #447c3c;
	font-size: 0.6em;
	font-family: sans-serif;
	margin: 0.3em;
}


/*** Pool and Lances **/

.pool > .sprotty-node {
    fill: var(--theia-titleBar-activeBackground);
    opacity: 70%;
    stroke: var(--theia-focusBorder);
    outline-color: var(--theia-focusBorder);
    outline-style: solid;
    outline-width: 1px;
    outline-offset: -1px;    
}
.pool > .sprotty-node.mouseover {
	 opacity: 60%;
}

.lane > .sprotty-node {
    fill: none;
    stroke: var(--theia-focusBorder);
    outline-color: var(--theia-focusBorder);
    outline-style: solid;
    outline-width: 1px;
    outline-offset: -1px;
}

.pool .header text {
	font-weight: normal;
    font-size: 0.7em;
    fill: var(--theia-titleBar-activeForeground);
}

/* sequence flow */
.sprotty-edge.sequenceFlow:not(.selected) .line,
.sprotty-edge.sequenceFlow:not(.selected) .arrow {
}

/* selected sequence flow */
.sprotty-edge.bpmnedge.selected .line,
.sprotty-edge.bpmnedge.selected .arrow {
    stroke: #ffdf8b;
}

/* messageFlow */
.sprotty-edge.messageFlow .line {
   stroke-dasharray: 6,4;
}
/* Association */
.sprotty-edge.association .line {
   stroke-dasharray: 4,4;
}

.helper-line {
	stroke: #f18e00;
	stroke-width:1;
}

.sprotty-comp {
    stroke: transparent;
    fill: transparent;
}

.label-edit input {
    margin-top: -3px;
    margin-left: -3px;
    
}
.label-edit textarea {
    margin: 1px;
    font-size: 1em !important;
}

